--- a/SignalRNetCorePrototype/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/SignalRNetCorePrototype/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -7,11 +7,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngClass]='{"show": isExpanded}'>
-        <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-            <a class="nav-link text-dark" [routerLink]='["/"]'>Home</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav flex-grow">
+              <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+                  <a class="nav-link text-dark" [routerLink]='["/"]'>Home</a>
+              </li>
+              <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+                  <a class="nav-link text-dark" [routerLink]='["/news"]'>News</a>
+              </li>
+          </ul>
       </div>
     </div>
   </nav>
